--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>happy new year fireworks (100 lines of code)</title>
+  <title>happy new year fireworks</title>
 
 
 </head>
