--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 
 <head>
   <meta charset="UTF-8">
-  <title>happy new year fireworks</title>
-
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="🎆 Animasi kembang api interaktif untuk merayakan Tahun Baru 2026! Tonton roket meluncur dan meledak membentuk tulisan 'Happy New Year 2026' dengan efek partikel yang menakjubkan. Dibuat dengan HTML5 Canvas dan JavaScript murni.">
+  <meta name="keywords" content="happy new year, tahun baru 2026, kembang api, fireworks, animasi, html5 canvas, javascript">
+  <meta name="author" content="Happy New Year 2026">
+  <meta name="theme-color" content="#000000">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="🎆 Happy New Year 2026 - Animasi Kembang Api Interaktif">
+  <meta property="og:description" content="Tonton kembang api spektakuler yang membentuk tulisan 'Happy New Year 2026' dengan efek partikel yang menakjubkan!">
+  <meta property="og:site_name" content="Happy New Year 2026">
+  
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="🎆 Happy New Year 2026 - Animasi Kembang Api Interaktif">
+  <meta name="twitter:description" content="Tonton kembang api spektakuler yang membentuk tulisan 'Happy New Year 2026' dengan efek partikel yang menakjubkan!">
+  
+  <title>🎆 Happy New Year 2026 - Animasi Kembang Api Interaktif</title>
 </head>
 
 <body>
